# officemateai-chainlit-fastapi-langgraph-qdrant

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  events.py
backend/app/graph/: edges.py  nodes.py  state.py  workflow.py
backend/app/models/: chat.py  vector.py
backend/app/routers/: chat.py
backend/app/services/: llm.py  qdrant.py
data/: FAQ_Handbook.docx  shop_info.txt
frontend/: Dockerfile  app.py  chainlit.md  requirements.txt
frontend/.chainlit/: config.toml
scripts/: ingest.py  ingest_all.py
